projects/vb6parse/snapshots/parsers/cst/invalid_syntax/invalid_parameter_list/conflicting_byval_byref_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_parameter_list.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
[]
